<resources>
    <string name="app_name">MyGalon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selesaikan_pemnayaran">Selesaikan Pemnayaran</string>
    <string name="rp_25_000">Rp 25.000</string>
    <string name="total_pembayaran">Total Pembayaran:</string>
    <string name="scan_qr_ini_menggunakan_aplikasi_pembayaran_anda_untuk_menyelesaikan_transaksi">Scan QR ini menggunakan aplikasi pembayaran Anda untuk menyelesaikan transaksi.</string>
    <string name="qris_pembayaran">QRIS Pembayaran</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="aqua_galon_adalah_air_minum_berkualitas_dengan_proses_penyaringan_berlapis_untuk_menjaga_rasa_yang_segar_dan_aman_dikonsumsi_setiap_hari">Aqua Galon adalah air minum berkualitas dengan proses penyaringan berlapis untuk menjaga rasa yang segar dan aman dikonsumsi setiap hari.</string>
    <string name="deskripsi_produk">Deskripsi Produk :</string>
</resources>