<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <!-- Product -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo"
        android:src="@drawable/aqua" />

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/qris_pembayaran"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- QR CODE -->
    <ImageView
        android:id="@+id/qr_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo1"
        android:src="@drawable/qris" />

    <!-- Instruction text -->
    <TextView
        android:layout_marginTop="12dp"
        android:text="@string/scan_qr_ini_menggunakan_aplikasi_pembayaran_anda_untuk_menyelesaikan_transaksi"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/total_pembayaran"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_total_qris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rp_25_000"
        android:textColor="#FF5822"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/btn_selesaikan_qris"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:text="Selesaikan_pembayaran"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="#FF9C2C"
        android:textColor="#FFFFFF" />

</LinearLayout>
